<resources>
    <string name="app_name">Taskapp</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="submit">Submit</string>
    <string name="task_description">Task Description</string>
    <string name="task_name">Task Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="you_have_an_account">You have an Account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="task_manager">Task Manager</string>
</resources>